--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aluracord - Matrix (peas)",
+    "name": "Aluracord ",
     "theme": {
         "colors": {
             "primary": {
@@ -16,12 +16,14 @@
             },
             "neutrals": {
                 "000": "#FFFFFF",
+                "007": "#FFFFFF75",
                 "050": "#F5F7FA",
                 "100": "#E4E7EB",
                 "200": "#CBD2D9",
                 "300": "#9AA5B1",
                 "400": "#52667A",
-                "500": "#313D49",
+                "501": "#313D49",
+                "500": "#e1ebf5",
                 "600": "#29333D",
                 "700": "#212931",
                 "800": "#181F25",
